# bitintr

./: .gitignore  .travis.yml  Cargo.toml  build.rs  check_asm.py  clippy.toml  index.html  license.md  readme.md  search-index.js
asm/: armv7_none_rbit.asm  armv7_none_rbit.rs  armv8_none_cls.asm  armv8_none_cls.rs  armv8_none_rbit.asm  armv8_none_rbit.rs  bmi2_mulx.asm  bmi2_mulx.rs  bmi2_pdep.rs  x86_bmi2_mulx.asm  x86_bmi2_mulx.rs  x86_bmi2_pdep.rs  x86_bmi2_pext.rs  x86_none_rbit.rs
benches/: rbit.rs
bitintr/: index.html  sidebar-items.js  trait.Int.html
bitintr/arm/: index.html  sidebar-items.js
bitintr/arm/v5/: index.html
bitintr/arm/v6/: REV.t.html  fn.rev.html  index.html  sidebar-items.js  trait.REV.html
bitintr/arm/v7/: CLZ.t.html  fn.clz.html  fn.rbit.html  index.html  rbit.v.html  sidebar-items.js  trait.CLZ.html  trait.RBit.html
bitintr/arm/v8/: CLS.t.html  cls.v.html  fn.cls.html  index.html  sidebar-items.js  trait.CLS.html
bitintr/int/: trait.Int.html
bitintr/x86/: index.html  sidebar-items.js
bitintr/x86/abm/: fn.lzcnt.html  fn.popcnt.html  index.html  popcnt.v.html  sidebar-items.js  trait.LZCNT.html  trait.POPCNT.html
bitintr/x86/bmi/: BLSI.t.html  BLSMSK.t.html  andn.v.html  blsr.v.html  fn.andn.html  fn.bextr.html  fn.blsi.html  fn.blsmsk.html  fn.blsr.html  fn.tzcnt.html  index.html  sidebar-items.js  trait.ANDN.html  trait.BEXTR.html  trait.BLSI.html  trait.BLSMSK.html  trait.BLSR.html  trait.TZCNT.html
bitintr/x86/bmi2/: MULX.t.html  bzhi.v.html  fn.bzhi.html  fn.mulx.html  fn.pdep.html  fn.pext.html  index.html  mulx.v.html  pext.v.html  sidebar-items.js  trait.BZHI.html  trait.MULX.html  trait.PDEP.html  trait.PEXT.html
bitintr/x86/tbm/: BLCIC.t.html  BLCS.t.html  BLSFILL.t.html  blcfill.v.html  blcic.v.html  blsfill.v.html  fn.bextr.html  fn.blcfill.html  fn.blci.html  fn.blcic.html  fn.blcmsk.html  fn.blcs.html  fn.blsfill.html  fn.blsic.html  fn.t1mskc.html  fn.tzmsk.html  index.html  sidebar-items.js  (+10 more)
ci/: run.sh
examples/: readme.rs
implementors/bitintr/: trait.Int.js
src/: andn.rs  bextr.rs  blcfill.rs  blci.rs  blcic.rs  blcmsk.rs  blcs.rs  blsfill.rs  blsi.rs  blsic.rs  blsmsk.rs  blsr.rs  bzhi.rs  cls.rs  int.rs  lib.rs  lzcnt.rs  macros.rs  mulx.rs  pdep.rs  pext.rs  popcnt.rs  rbit.rs  readme.md  rev.rs  t1mskc.rs  tzcnt.rs  tzmsk.rs
src/abm/: lzcnt.rs  mod.rs  popcnt.rs
src/alg/: abm.rs  bmi.rs  bmi2.rs  mod.rs  readme.md  tbm.rs
src/arm/: mod.rs  readme.rs
src/bitintr/: int.rs.html  lib.rs.html
src/bmi/: andn.rs  bextr.rs  bextri.rs  blsi.rs  blsmsk.rs  blsr.rs  mod.rs  tzcnt.rs
src/bmi2/: bzhi.rs  mod.rs  mulx.rs  pdep.rs  pext.rs
src/tbm/: bextri.rs  blcfill.rs  blci.rs  blcic.rs  blcmsk.rs  blcs.rs  blsfill.rs  blsic.rs  mod.rs  t1mskc.rs  tzmsk.rs
src/x86/: abm.rs  bmi.rs  bmi2.rs  mod.rs  readme.md  tbm.rs
(+225 files in other folders)
