[package]
name = "bitintr"
version = "0.1.12"
authors = ["gnzlbg <gonzalobg88@gmail.com>"]
description = "Portable Bit Manipulation Intrinsics."
documentation = "https://gnzlbg.github.io/bitintr"
homepage = "https://gnzlbg.github.io/bitintr"
repository = "https://github.com/gnzlbg/bitintr"
readme = "readme.md"
keywords = ["portable", "bit", "manipulation", "intrinsics"]
license = "MIT"
build = "build.rs"
categories = ["algorithms", "hardware-support"]

[build-dependencies]
rustc_version = "0.1.*"

[dev-dependencies]
bencher = "0.1.*"

[profile.test]
opt-level = 0
debug = true
lto = false
debug-assertions = true
codegen-units = 1
panic = 'unwind'

[profile.bench]
opt-level = 3
debug = false
rpath = false
lto = true
debug-assertions = false
codegen-units = 1
panic = 'abort'

[[bench]]
name = "rbit"
harness = false