[package]
name = "bitintr"
version = "0.2.0"
authors = ["gnzlbg <gonzalobg88@gmail.com>"]
description = "Portable Bit Manipulation Intrinsics."
documentation = "https://gnzlbg.github.io/bitintr"
homepage = "https://gnzlbg.github.io/bitintr"
repository = "https://github.com/gnzlbg/bitintr"
readme = "readme.md"
keywords = ["portable", "bit", "manipulation", "intrinsics"]
license = "MIT"
categories = ["algorithms", "hardware-support", "no-std"]

[badges]
travis-ci = { repository = "gnzlbg/bitintr", branch = "master" }

[features]
unstable = []

[profile.test]
opt-level = 0
debug = true
lto = false
debug-assertions = true
codegen-units = 1
panic = 'unwind'

[profile.bench]
opt-level = 3
debug = false
rpath = false
lto = true
debug-assertions = false
codegen-units = 1
panic = 'abort'

[[bench]]
name = "rbit"
harness = false