[package]
name = "bitintr"
version = "0.3.0"
authors = ["gnzlbg <gonzalobg88@gmail.com>"]
description = "Portable Bit Manipulation Intrinsics."
documentation = "https://docs.rs/bitintr"
homepage = "https://github.com/gnzlbg/bitintr"
repository = "https://github.com/gnzlbg/bitintr"
readme = "readme.md"
keywords = ["portable", "bit", "manipulation", "intrinsics"]
license = "MIT"
categories = ["algorithms", "hardware-support", "no-std"]
build = "build.rs"
edition = "2018"

[badges]
travis-ci = { repository = "gnzlbg/bitintr", branch = "master" }
is-it-maintained-issue-resolution = { repository = "gnzlbg/bitintr" }
is-it-maintained-open-issues = { repository = "gnzlbg/bitintr" }
maintenance = { status = "experimental" }

[profile.test]
opt-level = 0
debug = true
lto = false
debug-assertions = true
codegen-units = 1

[profile.bench]
opt-level = 3
debug = false
rpath = false
lto = true
debug-assertions = false
codegen-units = 1

[[bench]]
name = "rbit"
harness = false

# Required to run the benchmarks
#[dev-dependencies]
#bencher = "0.1"